force-app/main/default/objects/Master_Budget_Sheet_Item__c/Master_Budget_Sheet_Item__c.object-meta.xml
<CustomObject>
    <label>Master Budget Sheet Item</label>
    <nameField>
        <label>Master Budget Sheet Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Budget Sheet Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>