force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Activity Name</label>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Master Budget Sheet Items</relationshipLabel>
    <relationshipName>Master_Budget_Sheet_Items</relationshipName>
    <type>Lookup</type>
</CustomField>