force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Actual_Preview_Links__c.field-meta.xml
<CustomField>
    <fullName>Actual_Preview_Links__c</fullName>
    <label>Actual Preview Links</label>
    <type>Url</type>
</CustomField>