force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Actual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spend__c</fullName>
    <label>Actual Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>