force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Actual_Spend_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spend_Percentage__c</fullName>
    <label>Actual Spend %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>