force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>TextArea</type>
</CustomField>