force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/BAU_Project__c.field-meta.xml
<CustomField>
    <fullName>BAU_Project__c</fullName>
    <label>BAU/Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>