force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Name</label>
    <referenceTo>Marketing_Campaign__c</referenceTo>
    <relationshipLabel>Master Budget Sheet Items</relationshipLabel>
    <relationshipName>Master_Budget_Sheet_Items</relationshipName>
    <type>Lookup</type>
</CustomField>