force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Creative_Name__c.field-meta.xml
<CustomField>
    <fullName>Creative_Name__c</fullName>
    <label>Creative Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>