force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Image Link Ad</fullName>
            </value>
            <value>
                <fullName>Video Link Ad</fullName>
            </value>
            <value>
                <fullName>Carousel</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Instagram Story - Image</fullName>
            </value>
            <value>
                <fullName>Video Page Post</fullName>
            </value>
            <value>
                <fullName>Image Page Post</fullName>
            </value>
            <value>
                <fullName>Boost</fullName>
            </value>
            <value>
                <fullName>Instagram Story - Video</fullName>
            </value>
            <value>
                <fullName>TrueView Ad</fullName>
            </value>
            <value>
                <fullName>Bumper Ad</fullName>
            </value>
            <value>
                <fullName>Slideshow Ad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>