force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Marketing_Activity_Budget__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity_Budget__c</fullName>
    <formula>Activity_Name__r.Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Activity Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>