force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Marketing_Partner__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Budget Sheet Items</relationshipLabel>
    <relationshipName>Master_Budget_Sheet_Items</relationshipName>
    <type>Lookup</type>
</CustomField>