force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Master_Budget_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Master_Budget_Sheet__c</fullName>
    <label>Master Budget Sheet</label>
    <referenceTo>Master_Budget_Sheet__c</referenceTo>
    <relationshipLabel>Master Budget Sheet Items</relationshipLabel>
    <relationshipName>Master_Budget_Sheet_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>