force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Minimum_Spend__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Spend__c</fullName>
    <label>Minimum Spend</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>