force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/New_Budget__c.field-meta.xml
<CustomField>
    <fullName>New_Budget__c</fullName>
    <label>New Budget</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>