force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <description>Any Notes or comments</description>
    <inlineHelpText>Any Notes or comments</inlineHelpText>
    <label>Notes/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>