force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Awareness</fullName>
            </value>
            <value>
                <fullName>Village Awareness</fullName>
            </value>
            <value>
                <fullName>Privilege/Key Promotion</fullName>
            </value>
            <value>
                <fullName>Traffic</fullName>
            </value>
            <value>
                <fullName>Conversions</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Reach</fullName>
            </value>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Video Views</fullName>
            </value>
            <value>
                <fullName>Page Likes</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>