force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>Yandex</fullName>
            </value>
            <value>
                <fullName>Weibo</fullName>
            </value>
            <value>
                <fullName>Facebook &amp; Instagram</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Flashtalking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>