force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Preview_Links__c.field-meta.xml
<CustomField>
    <fullName>Preview_Links__c</fullName>
    <description>The link URL to preview</description>
    <inlineHelpText>The link URL to preview</inlineHelpText>
    <label>Preview Links</label>
    <type>Url</type>
</CustomField>