force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Primary_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Primary_Measurement__c</fullName>
    <label>Primary Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clicks</fullName>
            </value>
            <value>
                <fullName>Views</fullName>
            </value>
            <value>
                <fullName>Registrations</fullName>
            </value>
            <value>
                <fullName>Link Clicks</fullName>
            </value>
            <value>
                <fullName>Complete Registrations</fullName>
            </value>
            <value>
                <fullName>Post Engagement</fullName>
            </value>
            <value>
                <fullName>Reach</fullName>
            </value>
            <value>
                <fullName>Reach/Frequency</fullName>
            </value>
            <value>
                <fullName>10s Video Views</fullName>
            </value>
            <value>
                <fullName>Page Likes</fullName>
            </value>
            <value>
                <fullName>Impressions</fullName>
            </value>
            <value>
                <fullName>Landing Page Views</fullName>
            </value>
            <value>
                <fullName>Cost Per Store Visit</fullName>
            </value>
            <value>
                <fullName>Cost Per Click (CPC)</fullName>
            </value>
            <value>
                <fullName>Cost Per Thousand Impressions (CPM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>