force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Row_on_MBS__c.field-meta.xml
<CustomField>
    <fullName>Row_on_MBS__c</fullName>
    <label>Row on MBS</label>
    <length>15</length>
    <type>Text</type>
</CustomField>