force-app/main/default/objects/Master_Budget_Sheet_Item__c/fields/Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sub_Channel__c</fullName>
    <label>Sub Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Brand KW</fullName>
            </value>
            <value>
                <fullName>Generic KW</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>VNT</fullName>
            </value>
            <value>
                <fullName>GDN (Google Display Network)</fullName>
            </value>
            <value>
                <fullName>Facebook &amp; Instagram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>